@@ -5859,6 +5859,12 @@ the main variable.
 
 \fun{GEN}{F2xY_F2xqV_evalx}{GEN x, GEN V, GEN T} as \kbd{FpXY\_FpXQV\_evalx}.
 
+\subsec{\kbd{F2xXV/F2xXC}}. See \kbd{FpXXV} operations.
+
+\fun{GEN}{FlxXC_to_F2xXC}{GEN B}
+
+\fun{GEN}{F2xXC_to_ZXXC}{GEN B}
+
 \subsec{\kbd{F2xqX}}. See \kbd{FlxqX} operations.
 
 \fun{GEN}{random_F2xqX}{long d, long v, GEN T, ulong p} returns a random
