@@ -1963,6 +1963,32 @@ Kronecker_to_F2xqX(GEN z, GEN T)
 
 /***********************************************************************/
 /**                                                                   **/
+/**                             F2xXV/F2xXC                           **/
+/**                                                                   **/
+/***********************************************************************/
+
+GEN
+FlxXC_to_F2xXC(GEN B)
+{
+  long i, l = lg(B);
+  GEN z = cgetg(l, t_COL);
+  for (i=1; i<l; i++)
+    gel(z,i) = FlxX_to_F2xX(gel(B,i));
+  return z;
+}
+
+GEN
+F2xXC_to_ZXXC(GEN B)
+{
+  long i, l = lg(B);
+  GEN z = cgetg(l, t_COL);
+  for (i=1; i<l; i++)
+    gel(z,i) = F2xX_to_ZXX(gel(B,i));
+  return z;
+}
+
+/***********************************************************************/
+/**                                                                   **/
 /**                             F2xqX                                 **/
 /**                                                                   **/
 /***********************************************************************/
