@@ -125,6 +125,7 @@ GEN     F2xX_deriv(GEN z);
 GEN     F2xX_renormalize(GEN /*in place*/ x, long lx);
 GEN     F2xX_to_Kronecker(GEN P, long d);
 GEN     F2xX_to_ZXX(GEN B);
+GEN     F2xXC_to_ZXXC(GEN B);
 GEN     F2xY_F2xq_evalx(GEN P, GEN x, GEN T);
 GEN     F2xY_F2xqV_evalx(GEN P, GEN x, GEN T);
 long    F2xY_degreex(GEN b);
@@ -168,6 +169,7 @@ GEN     Flv_to_F2v(GEN x);
 GEN     Flx_to_F2x(GEN x);
 GEN     FlxC_to_F2xC(GEN x);
 GEN     FlxX_to_F2xX(GEN B);
+GEN     FlxXC_to_F2xXC(GEN B);
 GEN     Kronecker_to_F2xqX(GEN z, GEN T);
 GEN     Rg_to_F2xq(GEN x, GEN T);
 GEN     RgM_to_F2m(GEN x);
