@@ -49,6 +49,7 @@ Done for version 2.8.1 (released ??/??/2016):
    26- [libpari] ser_inv
    27- allow ellztopoint for E/Qp
 BA 28- [libpari] F2x_factor_squarefree
+BA 29- [libpari] FlxXC_to_F2xXC, F2xXC_to_ZXXC
 
   Changed
     1- remove useless flag in idealappr: directly allow factorization
